--- a/productos.html
+++ b/productos.html
@@ -162,7 +162,7 @@
                                             <li><i class="fa-solid fa-message"></i> 11 Comments</li>
                                         </ul>
                                     </div> -->
-                                    <h4><a href="productos.html">Bolsas negras</a></h4>
+                                    <h4><a href="productos.html">Manga en Extrusión</a></h4>
                                     <p></p>
                                     <!-- <a href="productos.html" class="read-more">Read More</a> -->
                                 </div>
@@ -183,7 +183,7 @@
                                             <li><i class="fa-solid fa-message"></i> 13 Comments</li>
                                         </ul>
                                     </div> -->
-                                    <h4><a href="productos.html">Bolsas negras</a></h4>
+                                    <h4><a href="productos.html">Sellado de Bolsas</a></h4>
                                     <p></p>
                                     <!-- <a href="productos.html" class="read-more">Read More</a> -->
                                 </div>
@@ -194,7 +194,7 @@
                         <div class="blog__item">
                             <div class="blog__inner">
                                 <div class="blog__thumb">
-                                    <a href="productos.html"><img src="assets/images/blog/home/producto3.png" alt="blog thumb" /></a>
+                                    <a href="productos.html"><img src="assets/images/blog/home/bolsas_negras.png" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 25 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
@@ -204,7 +204,7 @@
                                             <li><i class="fa-solid fa-message"></i> 18 Comments</li>
                                         </ul>
                                     </div> -->
-                                    <h4><a href="productos.html">Cintas de Embalaje</a></h4>
+                                    <h4><a href="productos.html">Bolsas Negras</a></h4>
                                     <p></p>
                                     <!-- <a href="productos.html" class="read-more">Read More</a> -->
                                 </div>
@@ -215,7 +215,7 @@
                         <div class="blog__item">
                             <div class="blog__inner">
                                 <div class="blog__thumb">
-                                    <a href="productos.html"><img src="assets/images/blog/home/producto4.png" alt="blog thumb" /></a>
+                                    <a href="productos.html"><img src="assets/images/blog/home/bolsas_3_colores.png" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
@@ -225,7 +225,28 @@
                                             <li><i class="fa-solid fa-message"></i> 11 Comments</li>
                                         </ul>
                                     </div> -->
-                                    <h4><a href="productos.html">Cintas de Embalaje</a></h4>
+                                    <h4><a href="productos.html">Bolsas Envasadas</a></h4>
+                                    <p></p>
+                                    <!-- <a href="productos.html" class="read-more">Read More</a> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 col-12">
+                        <div class="blog__item">
+                            <div class="blog__inner">
+                                <div class="blog__thumb">
+                                    <a href="productos.html"><img src="assets/images/blog/home/producto6.jpeg" alt="blog thumb" /></a>
+                                    <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 25 april 2022</span> -->
+                                </div>
+                                <div class="blog__content">
+                                    <!-- <div class="blog__meta">
+                                        <ul>
+                                            <li><i class="fa-solid fa-user"></i> Admin</li>
+                                            <li><i class="fa-solid fa-message"></i> 18 Comments</li>
+                                        </ul>
+                                    </div> -->
+                                    <h4><a href="productos.html">Rollos Prepicados</a></h4>
                                     <p></p>
                                     <!-- <a href="productos.html" class="read-more">Read More</a> -->
                                 </div>
@@ -249,27 +270,6 @@
                                     <h4><a href="productos.html">Mangas de 2 y 3 metros</a></h4>
                                     <p>- Negras</p>
                                     <p>- Transparentes</p>
-                                    <!-- <a href="productos.html" class="read-more">Read More</a> -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-sm-6 col-12">
-                        <div class="blog__item">
-                            <div class="blog__inner">
-                                <div class="blog__thumb">
-                                    <a href="productos.html"><img src="assets/images/blog/home/producto6.jpeg" alt="blog thumb" /></a>
-                                    <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 25 april 2022</span> -->
-                                </div>
-                                <div class="blog__content">
-                                    <!-- <div class="blog__meta">
-                                        <ul>
-                                            <li><i class="fa-solid fa-user"></i> Admin</li>
-                                            <li><i class="fa-solid fa-message"></i> 18 Comments</li>
-                                        </ul>
-                                    </div> -->
-                                    <h4><a href="productos.html">Bobina en extrusión</a></h4>
-                                    <p></p>
                                     <!-- <a href="productos.html" class="read-more">Read More</a> -->
                                 </div>
                             </div>
