--- a/productos.html
+++ b/productos.html
@@ -150,9 +150,9 @@
                 <div class="row g-4 justify-content-center">
                     <div class="col-lg-4 col-sm-6 col-12">
                         <div class="blog__item">
-                            <div class="blog__inner">
+                            <div class="blog__inner" style="height: 540px">
                                 <div class="blog__thumb">
-                                    <a href="productos.html"><img src="assets/images/blog/home/producto1.png" alt="blog thumb" /></a>
+                                    <a href="productos.html"><img src="assets/images/blog/home/producto1.png" class="img-fluid" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
@@ -171,9 +171,9 @@
                     </div>
                     <div class="col-lg-4 col-sm-6 col-12">
                         <div class="blog__item">
-                            <div class="blog__inner">
+                            <div class="blog__inner" style="height: 540px">
                                 <div class="blog__thumb">
-                                    <a href="productos.html"><img src="assets/images/blog/home/producto2.png" alt="blog thumb" /></a>
+                                    <a href="productos.html"><img src="assets/images/blog/home/producto2.png" class="img-fluid" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 23 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
@@ -192,9 +192,9 @@
                     </div>
                     <div class="col-lg-4 col-sm-6 col-12">
                         <div class="blog__item">
-                            <div class="blog__inner">
+                            <div class="blog__inner" style="height: 540px">
                                 <div class="blog__thumb">
-                                    <a href="productos.html"><img src="assets/images/blog/home/bolsas_negras.png" alt="blog thumb" /></a>
+                                    <a href="productos.html"><img src="assets/images/blog/home/bolsas_negras.png" class="img-fluid" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 25 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
@@ -213,7 +213,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6 col-12">
                         <div class="blog__item">
-                            <div class="blog__inner">
+                            <div class="blog__inner" style="height: 438px">
                                 <div class="blog__thumb">
                                     <a href="productos.html"><img src="assets/images/blog/home/bolsas_3_colores.png" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span> -->
@@ -232,9 +232,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 col-12">
+                    <div class="col-lg-4 col-sm-6 col-12 ">
                         <div class="blog__item">
-                            <div class="blog__inner">
+                            <div class="blog__inner" style="height: 438px">
                                 <div class="blog__thumb">
                                     <a href="productos.html"><img src="assets/images/blog/home/producto6.jpeg" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 25 april 2022</span> -->
@@ -255,7 +255,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6 col-12">
                         <div class="blog__item">
-                            <div class="blog__inner">
+                            <div class="blog__inner" style="height: 438px">
                                 <div class="blog__thumb">
                                     <a href="productos.html"><img src="assets/images/blog/home/producto5.jpeg" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 23 april 2022</span> -->
