--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -87,7 +87,7 @@
                                         <a href="productos.html">Productos</a>
                                     </li>
                                     <li>
-                                        <a href="eventos_actividades.html">Noticias</a>
+                                        <a href="noticias.html">Noticias</a>
                                     </li>
                                     <li><a href="contact.html">Contactenos</a></li>
                                     <li><a href="mapa_sitio.html">Mapa del Sitio</a></li>
