--- a/index.html
+++ b/index.html
@@ -938,12 +938,12 @@
         <div class="footer__top padding-tb bg-title overflow-hidden">
             <div class="container">
                 <div class="row g-5 g-lg-4">
-                    <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="col-lg-4 col-sm-6 col-12">
                         <div class="footer__about">
                             <div class="footer__title">
                                 <h5>Sabraplas</h5>
                             </div>
-                            <p>Fabricación de productos plásticos tales como mangas y bolsas plásticas</p>
+                            <p>Fabricación de productos plásticos tales como mangas y bolsas plásticas. Productos Plasticos 100% Reciclados.</p>
                             <ul>
                                 <li><a href="https://wa.me/56991769218?text=Hola,%20quiero%20consultar%20los%20precios%20de%20los%20productos!"><i class="fa-brands fa-whatsapp"></i></a></li>
                                 <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
@@ -952,14 +952,14 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="col-lg-4 col-sm-6 col-12">
                         <div class="footer__page">
                             <div class="footer__title">
                                 <h5>Enlaces</h5>
                             </div>
                             <div class="footer__wrapper">
                                 <ul>
-                                    <li><a href="index.html" class="active">Inicio</a></li>
+                                    <li><a href="index.html">Inicio</a></li>
                                     <li><a href="quienes_somos.html">Quienes Somos</a></li>
                                     <li><a href="productos.html">Productos</a></li>
                                     <li><a href="noticias.html">Noticias</a></li>
@@ -969,48 +969,21 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6 col-12">
+                    <div class="col-lg-4 col-sm-6 col-12">
                         <div class="footer__post">
                             <div class="footer__title">
-                                <h5>Noticias</h5>
+                                <h5>Dirección</h5>
                             </div>
                             <div class="footer__wrapper">
                                 <ul>
                                     <li>
-                                        <div class="thumb">
-                                            <a href="blog-sing.html"><img src="assets/images/blog/recentpost/01.jpg" alt="recentpost" /></a>
-                                        </div>
-                                        <div class="content">
-                                            <h6><a href="blog-single.html">Employe development is company’s</a></h6>
-                                            <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span>
-                                        </div>
+                                        <img src="assets/images/header/icon/05.png" alt="icon" />
+                                        <span>Salvador Allende 725, San Miguel, Santiago, Chile</span>
                                     </li>
                                     <li>
-                                        <div class="thumb">
-                                            <a href="blog-sing.html"><img src="assets/images/blog/recentpost/01.jpg" alt="recentpost" /></a>
-                                        </div>
-                                        <div class="content">
-                                            <h6><a href="blog-single.html">Should fixing take 100  corporate steps.</a></h6>
-                                            <span class="date"><i class="fa-solid fa-calendar-days"></i> 23 april 2022</span>
-                                        </div>
+                                        <img src="assets/images/header/icon/04.png" alt="icon" />
+                                        <span> +56 2 32302270</span>
                                     </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-sm-6 col-12">
-                        <div class="footer__gallery">
-                            <div class="footer__title">
-                                <h5>Noticias recientes</h5>
-                            </div>
-                            <div class="footer__wrapper">
-                                <ul>
-                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/02.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/02.jpg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -1021,7 +994,7 @@
         <div class="footer__bottom">
             <div class="container">
                 <div class="footer__copytext text-center">
-                    <p>&copy; 2023 <a href="index.html">Sabraplas</a>. All rights reserved.</p>
+                    <p>&copy; 2024 <a href="index.html">Sabraplas</a>. All rights reserved.</p>
                 </div>
             </div>
         </div>
