--- a/productos.html
+++ b/productos.html
@@ -204,7 +204,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6 col-12">
                         <div class="blog__item">
-                            <div class="blog__inner" style="height: 438px">
+                            <div class="blog__inner" style="height: 400px">
                                 <div class="blog__thumb">
                                     <a href="productos.html"><img src="assets/images/blog/home/bolsas_3_colores.png" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span> -->
@@ -225,7 +225,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6 col-12 ">
                         <div class="blog__item">
-                            <div class="blog__inner" style="height: 438px">
+                            <div class="blog__inner" style="height: 400px">
                                 <div class="blog__thumb">
                                     <a href="productos.html"><img src="assets/images/blog/home/producto6.jpeg" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 25 april 2022</span> -->
@@ -246,7 +246,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6 col-12">
                         <div class="blog__item">
-                            <div class="blog__inner" style="height: 438px">
+                            <div class="blog__inner" style="height: 400px">
                                 <div class="blog__thumb">
                                     <a href="productos.html"><img src="assets/images/blog/home/producto5.jpeg" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 23 april 2022</span> -->
@@ -264,8 +264,48 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-sm-6 col-12">
+                        <div class="blog__item">
+                            <div class="blog__inner" style="height: 400px">
+                                <div class="blog__thumb">
+                                    <a href="productos.html"><img src="assets/images/blog/home/maquina_prepicado.JPG" alt="blog thumb" /></a>
+                                    <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 23 april 2022</span> -->
+                                </div>
+                                <div class="blog__content">
+                                    <!-- <div class="blog__meta">
+                                        <ul>
+                                            <li><i class="fa-solid fa-user"></i> Admin</li>
+                                            <li><i class="fa-solid fa-message"></i> 13 Comments</li>
+                                        </ul>
+                                    </div> -->
+                                    <h4><a href="productos.html">Maquina de Prepicado</a></h4>
+                                    <!-- <a href="productos.html" class="read-more">Read More</a> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 col-12">
+                        <div class="blog__item">
+                            <div class="blog__inner" style="height: 400px">
+                                <div class="blog__thumb">
+                                    <a href="productos.html"><img src="assets/images/blog/home/rollos_prepicados.JPG" alt="blog thumb" /></a>
+                                    <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 23 april 2022</span> -->
+                                </div>
+                                <div class="blog__content">
+                                    <!-- <div class="blog__meta">
+                                        <ul>
+                                            <li><i class="fa-solid fa-user"></i> Admin</li>
+                                            <li><i class="fa-solid fa-message"></i> 13 Comments</li>
+                                        </ul>
+                                    </div> -->
+                                    <h4><a href="productos.html">Rollos de Prepicados</a></h4>
+                                    <!-- <a href="productos.html" class="read-more">Read More</a> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <nav aria-label="Page navigation example">
+                <!-- <nav aria-label="Page navigation example">
                     <ul class="pagination justify-content-center mt-5">
                         <li class="page-item">
                             <a class="page-link" href="#" aria-label="Previous">
@@ -281,7 +321,7 @@
                             </a>
                         </li>
                     </ul>
-                </nav>
+                </nav> -->
             </div>
         </div>
     </div>
