--- a/noticias.html
+++ b/noticias.html
@@ -134,99 +134,40 @@
 
 
 
-    <!-- ==========Blog Section Starts Here==========
+    <!-- ==========Blog Section Starts Here==========-->
     <div class="blog home blog--classic padding-tb">
         <div class="container">
+            <div class="section__header text-center">
+                <h6>Sabraplas</h6>
+                <h2>Cual es la leccion para no olvidar, cuando se cierra una puerta, siempre se abre una ventana, pero siempre debes buscar la ventana..</h2>
+            </div>
             <div class="section__wrapper">
                 <div class="row g-5">
-                    <div class="col-lg-8 col-12">
+                    <div class="col-lg-12 col-12">
                         <div class="row g-4 justify-content-center">
                             <div class="col-12">
                                 <div class="blog__item">
                                     <div class="blog__inner">
                                         <div class="blog__thumb">
-                                            <a href="blog-single.html"><img src="assets/images/blog/01.jpg" alt="rajibraj" /></a>
-                                            <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span>
+                                            <a href="blog-single.html"><img src="assets/images/blog/destino_verde.jpeg" alt="rajibraj" /></a>
+                                            <span class="date"><i class="fa-solid fa-calendar-days"></i> 01/12/2023</span>
                                         </div>
                                         <div class="blog__content">
-                                            <h3><a href="blog-single.html">Tips for Achieving Success in Your Business</a></h3>
-                                            <div class="blog__meta">
+                                            <h3><a href="blog-single.html">Chile gana por segundo año consecutivo el “Oscar del Turismo” como el Mejor Destino Verde del Mundo</a></h3>
+                                            <!-- <div class="blog__meta">
                                                 <ul>
                                                     <li><i class="fa-solid fa-user"></i> Admin</li>
                                                     <li><i class="fa-solid fa-message"></i> Comments  (3)</li>
                                                 </ul>
-                                            </div>
-                                            <p>Credibse syndicate vertical services wherea unique human capital Continue cultivat extent rather than stand alone process and cultivat virtual customer service throuigh profesional intellectual leverage awesome business existing.</p>
-                                            <a href="blog-single.html" class="read-more">Continue Reading....</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="blog__item">
-                                    <div class="blog__inner">
-                                        <div class="blog__thumb">
-                                            <a href="blog-single.html"><img src="assets/images/blog/01.jpg" alt="rajibraj" /></a>
-                                            <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span>
-                                        </div>
-                                        <div class="blog__content">
-                                            <h3><a href="blog-single.html">Changing & Grow Business Faster and Better</a></h3>
-                                            <div class="blog__meta">
-                                                <ul>
-                                                    <li><i class="fa-solid fa-user"></i> Admin</li>
-                                                    <li><i class="fa-solid fa-message"></i> Comments  (3)</li>
-                                                </ul>
-                                            </div>
-                                            <p>Credibse syndicate vertical services wherea unique human capital Continue cultivat extent rather than stand alone process and cultivat virtual customer service throuigh profesional intellectual leverage awesome business existing.</p>
-                                            <a href="blog-single.html" class="read-more">Continue Reading....</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="blog__item">
-                                    <div class="blog__inner">
-                                        <div class="blog__thumb">
-                                            <a href="blog-single.html"><img src="assets/images/blog/01.jpg" alt="rajibraj" /></a>
-                                            <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span>
-                                        </div>
-                                        <div class="blog__content">
-                                            <h3><a href="blog-single.html">Changing & Grow Business Faster and Better</a></h3>
-                                            <div class="blog__meta">
-                                                <ul>
-                                                    <li><i class="fa-solid fa-user"></i> Admin</li>
-                                                    <li><i class="fa-solid fa-message"></i> Comments  (3)</li>
-                                                </ul>
-                                            </div>
-                                            <p>Credibse syndicate vertical services wherea unique human capital Continue cultivat extent rather than stand alone process and cultivat virtual customer service throuigh profesional intellectual leverage awesome business existing.</p>
-                                            <a href="blog-single.html" class="read-more">Continue Reading....</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="blog__item">
-                                    <div class="blog__inner">
-                                        <div class="blog__thumb">
-                                            <a href="blog-single.html"><img src="assets/images/blog/01.jpg" alt="rajibraj" /></a>
-                                            <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span>
-                                        </div>
-                                        <div class="blog__content">
-                                            <h3><a href="blog-single.html">Changing & Grow Business Faster and Better</a></h3>
-                                            <div class="blog__meta">
-                                                <ul>
-                                                    <li><i class="fa-solid fa-user"></i> Admin</li>
-                                                    <li><i class="fa-solid fa-message"></i> Comments  (3)</li>
-                                                </ul>
-                                            </div>
-                                            <p>Credibse syndicate vertical services wherea unique human capital Continue cultivat extent rather than stand alone process and cultivat virtual customer service throuigh profesional intellectual leverage awesome business existing.</p>
-                                            <a href="blog-single.html" class="read-more">Continue Reading....</a>
+                                            </div> -->
+                                            <p>En esta oportunidad, nuestro país superó en la categoría a Colombia, Ecuador, Madagascar, Noruega y Perú, consiguiendo así por cuarta vez el premio en los World Travel Awards.</p>
+                                            <!-- <a href="blog-single.html" class="read-more">Continue Reading....</a> -->
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <nav aria-label="Page navigation example">
+                        <!-- <nav aria-label="Page navigation example">
                             <ul class="pagination justify-content-center mt-5">
                                 <li class="page-item">
                                     <a class="page-link" href="#" aria-label="Previous">
@@ -242,9 +183,9 @@
                                     </a>
                                 </li>
                             </ul>
-                        </nav>
+                        </nav> -->
                     </div>
-                    <div class="col-lg-4 col-12">
+                    <!-- <div class="col-lg-4 col-12">
                         <div class="sidebar">
                             <div class="row g-4">
                                 <div class="col-12">
@@ -368,11 +309,11 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
-    </div>-->
+    </div>
     <!-- ==========Blog Section Ends Here========== -->
 
 
