--- a/noticias.html
+++ b/noticias.html
@@ -149,11 +149,11 @@
                                 <div class="blog__item">
                                     <div class="blog__inner">
                                         <div class="blog__thumb">
-                                            <a href="blog-single.html"><img src="assets/images/blog/destino_verde.jpeg" alt="rajibraj" /></a>
+                                            <img src="assets/images/blog/destino_verde.jpeg" alt="rajibraj" />
                                             <span class="date"><i class="fa-solid fa-calendar-days"></i> 01/12/2023</span>
                                         </div>
                                         <div class="blog__content">
-                                            <h3><a href="blog-single.html">Chile gana por segundo año consecutivo el “Oscar del Turismo” como el Mejor Destino Verde del Mundo</a></h3>
+                                            <h3>Chile gana por segundo año consecutivo el “Oscar del Turismo” como el Mejor Destino Verde del Mundo</h3>
                                             <!-- <div class="blog__meta">
                                                 <ul>
                                                     <li><i class="fa-solid fa-user"></i> Admin</li>
