--- a/contact.html
+++ b/contact.html
@@ -227,8 +227,9 @@
     <!-- ==========GoogleMap Section Starts Here========== -->
     <div class="container">
         <div class="googleMap">
-            <iframe src="https://api.mapbox.com/styles/v1/mapbox/streets-v12/static/pin-l-embassy+f74e4e(-70.6431258,-33.4942989)/-70.6431258,-33.4942989,17/1000x450?access_token=pk.eyJ1IjoicGJyb2NrbWFubiIsImEiOiJjajgxbnlqbGg2enR4MnhxbXllaHYzOGNzIn0.mA9mk90HM6ePh0gQq_55yw"></iframe>
+            <!-- <iframe src="https://www.google.com/maps/place/Av.+Salvador+Allende+725,+8900226+San+Miguel,+Regi%C3%B3n+Metropolitana/@-33.4942989,-70.6431258,17z/data=!3m1!4b1!4m6!3m5!1s0x9662dab666fc715b:0xa0ac2578caf4214d!8m2!3d-33.4942989!4d-70.6431258!16s%2Fg%2F11gr7t8k7b?entry=ttu"></iframe> -->
             <!-- <iframe src="https://api.mapbox.com/styles/v1/mapbox/streets-v12/static/url-https%3A%2F%2Farangurensoto.com%2Flogo-alguaciles-ico.png(-70.589145867094,-33.4345837)/-70.589145867094,-33.4349837,14/1000x450?access_token=pk.eyJ1IjoicGJyb2NrbWFubiIsImEiOiJjajgxbnlqbGg2enR4MnhxbXllaHYzOGNzIn0.mA9mk90HM6ePh0gQq_55yw"></iframe> -->
+            <div class="mapouter"><div class="gmap_canvas"><iframe src="https://maps.google.com/maps?q=Salvador%20Allende%20725,%20San%20Miguel,%20Santiago,%20Chile&amp;t=&amp;z=18&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" style="width: 1080px; height: 400px;"></iframe><style>.mapouter{position:relative;height:400px;width:1080px;background:#fff;} .maprouter a{color:#fff !important;position:absolute !important;top:0 !important;z-index:0 !important;}</style><a href="https://blooketjoin.org/">blooket</a><style>.gmap_canvas{overflow:hidden;height:400px;width:1080px}.gmap_canvas iframe{position:relative;z-index:2}</style></div></div>
         </div>
     </div>
     <!-- ==========GoogleMap Section Ends Here========== -->
@@ -248,7 +249,7 @@
                             <div class="footer__title">
                                 <h5>Sabraplas</h5>
                             </div>
-                            <p>Fabricación de productos plásticos tales como mangas y bolsas plásticas. Productos Plasticos 100% Reciclados.</p>
+                            <p>Fabricación y Comercialización de Productos Plásticos. Productos Plasticos 100% Reciclados.</p>
                             <ul>
                                 <li><a href="https://wa.me/56932302270?text=Hola,%20quiero%20consultar%20los%20precios%20de%20los%20productos!"><i class="fa-brands fa-whatsapp"></i></a></li>
                                 <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
