--- a/productos.html
+++ b/productos.html
@@ -340,7 +340,7 @@
                             <div class="footer__title">
                                 <h5>Sabraplas</h5>
                             </div>
-                            <p>Fabricación de productos plásticos tales como mangas y bolsas plásticas. Productos Plasticos 100% Reciclados.</p>
+                            <p>Fabricación y Comercialización de Productos Plásticos. Productos Plasticos 100% Reciclados.</p>
                             <ul>
                                 <li><a href="https://wa.me/56932302270?text=Hola,%20quiero%20consultar%20los%20precios%20de%20los%20productos!"><i class="fa-brands fa-whatsapp"></i></a></li>
                                 <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
