--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -137,7 +137,7 @@
     <div class="misson padding-tb">
         <div class="container">
             <div class="section__header text-center">
-                <h6>Sabraplas</h6>
+                <h1 style="color: #34bd6b">Sabraplas</h2>
                 <h2>Fundada el día 3 de Octubre del año 2013</h2>
             </div>
             <div class="section__wrapper">
@@ -160,7 +160,7 @@
                         <div class="misson__item">
                             <div class="misson__inner">
                                 <div class="misson__thumb">
-                                    <img src="assets/images/misson/01.jpg" alt="rajibraj" />
+                                    <img src="assets/images/misson/vision.jpeg" alt="rajibraj" />
                                 </div>
                                 <div class="misson__content">
                                     <h4>Visión</h4>
@@ -228,7 +228,8 @@
                                 </div>
                                 <div class="misson__content">
                                     <h4>Historia</h4>
-                                    <p>Sabraplas, es una empresa familiar fundada el día 3 de Octubre del año 2013,  especializándose en la fabricación de productos plásticos tales como mangas y bolsas  plásticas, ocupando en sus procesos productos reciclados como también material virgen,  además, en sus procesos se ocupan polietilenos de alta y baja densidad.</p>
+                                    <p>Sabraplas, es una empresa familiar fundada el día 3 de Octubre del año 2013.</p>
+                                    <p>Desde sus inicios, hemos fabricado bolsas de aseo, a granel y envasadas, bolsas prepicadas en formato rollo, mangas y láminas en material reciclado, también en material virgen, ocupando en sus procesos polietilenos de alta y baja densidad.</p>
                                     <!-- <ul>
                                         <li><i class="fa-solid fa-circle-check"></i> Appropriately empower dynamic leadership.</li>
                                         <li><i class="fa-solid fa-circle-check"></i> Here’s what they have to say about us.</li>
@@ -404,7 +405,7 @@
                             <div class="footer__title">
                                 <h5>Sabraplas</h5>
                             </div>
-                            <p>Fabricación de productos plásticos tales como mangas y bolsas plásticas. Productos Plasticos 100% Reciclados.</p>
+                            <p>Fabricación y Comercialización de Productos Plásticos. Productos Plasticos 100% Reciclados.</p>
                             <ul>
                                 <li><a href="https://wa.me/56932302270?text=Hola,%20quiero%20consultar%20los%20precios%20de%20los%20productos!"><i class="fa-brands fa-whatsapp"></i></a></li>
                                 <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
