--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="banner__slider__one overflow-hidden">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <div class="banner bg-img" style="background-image: url(assets/images/banner/bg/sabraplas.png);">
+                <div class="banner bg-img" style="background-image: url(assets/images/portada_1.jpg);">
                     <div class="banner__one">
                         <div class="container">
                             <div class="banner__area">
@@ -150,7 +150,7 @@
                 </div>
             </div>
             <div class="swiper-slide">
-                <div class="banner bg-img" style="background-image: url(assets/images/banner/bg/Fachada2.jpg);">
+                <div class="banner bg-img" style="background-image: url(assets/images/portada_2.jpg);">
                     <div class="banner__one">
                         <div class="container">
                             <div class="banner__area">
@@ -180,7 +180,7 @@
                 </div>
             </div>
             <div class="swiper-slide">
-                <div class="banner bg-img" style="background-image: url(assets/images/banner/bg/Fachada3.jpg);">
+                <div class="banner bg-img" style="background-image: url(assets/images/portada_3.jpg);">
                     <div class="banner__one">
                         <div class="container">
                             <div class="banner__area">
@@ -210,7 +210,7 @@
                 </div>
             </div>
             <div class="swiper-slide">
-                <div class="banner bg-img" style="background-image: url(assets/images/banner/bg/Fachada4.jpg);">
+                <div class="banner bg-img" style="background-image: url(assets/images/portada_4.jpg);">
                     <div class="banner__one">
                         <div class="container">
                             <div class="banner__area">
