--- a/noticias.html
+++ b/noticias.html
@@ -149,7 +149,7 @@
                                 <div class="blog__item">
                                     <div class="blog__inner">
                                         <div class="blog__thumb">
-                                            <img src="assets/images/blog/destino_verde.jpeg" alt="rajibraj" />
+                                            <img src="assets/images/noticia_1.jpg" alt="rajibraj" />
                                             <span class="date"><i class="fa-solid fa-calendar-days"></i> 01/12/2023</span>
                                         </div>
                                         <div class="blog__content">
