--- a/productos.html
+++ b/productos.html
@@ -143,7 +143,7 @@
                         <div class="blog__item">
                             <div class="blog__inner" style="height: 540px">
                                 <div class="blog__thumb">
-                                    <a href="productos.html"><img src="assets/images/blog/home/producto1.png" class="img-fluid" alt="blog thumb" /></a>
+                                    <a href="productos.html"><img src="assets/images/producto_1.jpg" class="img-fluid" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
@@ -164,7 +164,7 @@
                         <div class="blog__item">
                             <div class="blog__inner" style="height: 540px">
                                 <div class="blog__thumb">
-                                    <a href="productos.html"><img src="assets/images/blog/home/producto2.png" class="img-fluid" alt="blog thumb" /></a>
+                                    <a href="productos.html"><img src="assets/images/producto_2.jpg" class="img-fluid" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 23 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
@@ -185,7 +185,7 @@
                         <div class="blog__item">
                             <div class="blog__inner" style="height: 540px">
                                 <div class="blog__thumb">
-                                    <a href="productos.html"><img src="assets/images/blog/home/bolsas_negras.png" class="img-fluid" alt="blog thumb" /></a>
+                                    <a href="productos.html"><img src="assets/images/producto_3.jpg" class="img-fluid" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 25 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
@@ -206,7 +206,7 @@
                         <div class="blog__item">
                             <div class="blog__inner" style="height: 400px">
                                 <div class="blog__thumb">
-                                    <a href="productos.html"><img src="assets/images/blog/home/bolsas_3_colores.png" alt="blog thumb" /></a>
+                                    <a href="productos.html"><img src="assets/images/producto_4.jpg" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
@@ -227,7 +227,7 @@
                         <div class="blog__item">
                             <div class="blog__inner" style="height: 400px">
                                 <div class="blog__thumb">
-                                    <a href="productos.html"><img src="assets/images/blog/home/producto6.jpeg" alt="blog thumb" /></a>
+                                    <a href="productos.html"><img src="assets/images/producto_5.jpg" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 25 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
@@ -248,7 +248,7 @@
                         <div class="blog__item">
                             <div class="blog__inner" style="height: 400px">
                                 <div class="blog__thumb">
-                                    <a href="productos.html"><img src="assets/images/blog/home/producto5.jpeg" alt="blog thumb" /></a>
+                                    <a href="productos.html"><img src="assets/images/producto_6.jpg" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 23 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
@@ -268,7 +268,7 @@
                         <div class="blog__item">
                             <div class="blog__inner" style="height: 400px">
                                 <div class="blog__thumb">
-                                    <a href="productos.html"><img src="assets/images/blog/home/maquina_prepicado.JPG" alt="blog thumb" /></a>
+                                    <a href="productos.html"><img src="assets/images/producto_7.jpg" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 23 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
@@ -288,7 +288,7 @@
                         <div class="blog__item">
                             <div class="blog__inner" style="height: 400px">
                                 <div class="blog__thumb">
-                                    <a href="productos.html"><img src="assets/images/blog/home/rollos_prepicados.JPG" alt="blog thumb" /></a>
+                                    <a href="productos.html"><img src="assets/images/producto_8.jpg" alt="blog thumb" /></a>
                                     <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 23 april 2022</span> -->
                                 </div>
                                 <div class="blog__content">
