--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -160,7 +160,7 @@
                         <div class="misson__item">
                             <div class="misson__inner">
                                 <div class="misson__thumb">
-                                    <img src="assets/images/misson/vision.jpeg" alt="rajibraj" />
+                                    <img src="assets/images/vision.jpg" alt="rajibraj" />
                                 </div>
                                 <div class="misson__content">
                                     <h4>Visión</h4>
@@ -179,7 +179,7 @@
                         <div class="misson__item">
                             <div class="misson__inner">
                                 <div class="misson__thumb">
-                                    <img src="assets/images/misson/02.jpg" alt="rajibraj" />
+                                    <img src="assets/images/mision.jpg" alt="rajibraj" />
                                 </div>
                                 <div class="misson__content">
                                     <h4>Misión</h4>
@@ -199,7 +199,7 @@
                         <div class="misson__item">
                             <div class="misson__inner">
                                 <div class="misson__thumb">
-                                    <img src="assets/images/misson/valores.png" alt="rajibraj" />
+                                    <img src="assets/images/valores.jpg" alt="rajibraj" />
                                 </div>
                                 <div class="misson__content">
                                     <h4>Valores</h4>
@@ -224,7 +224,7 @@
                         <div class="misson__item">
                             <div class="misson__inner">
                                 <div class="misson__thumb">
-                                    <img src="assets/images/misson/historia.jpeg" alt="rajibraj" />
+                                    <img src="assets/images/historia.jpg" alt="rajibraj" />
                                 </div>
                                 <div class="misson__content">
                                     <h4>Historia</h4>
